Feature: Refactor services to enhance reactive programming support with Mono and improve code structure