@@ -3,7 +3,6 @@ package no.nav.dolly.bestilling.instdata;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import ma.glasnost.orika.MapperFacade;
-import no.nav.dolly.bestilling.ClientFuture;
 import no.nav.dolly.bestilling.ClientRegister;
 import no.nav.dolly.bestilling.instdata.domain.InstdataResponse;
 import no.nav.dolly.domain.jpa.BestillingProgress;
@@ -34,32 +33,26 @@ public class InstdataClient implements ClientRegister {
     private final TransactionHelperService transactionHelperService;
 
     @Override
-    public Flux<ClientFuture> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
+    public Mono<BestillingProgress> gjenopprett(RsDollyUtvidetBestilling bestilling, DollyPerson dollyPerson, BestillingProgress progress, boolean isOpprettEndre) {
 
-        if (!bestilling.getInstdata().isEmpty()) {
+        var context = MappingContextUtils.getMappingContext();
+        context.setProperty("ident", dollyPerson.getIdent());
 
-            var context = MappingContextUtils.getMappingContext();
-            context.setProperty("ident", dollyPerson.getIdent());
-            var instdata = mapperFacade.mapAsList(bestilling.getInstdata(), Instdata.class, context);
-
-            return Flux.from(instdataConsumer.getMiljoer()
-                    .flatMap(miljoer -> Flux.fromIterable(miljoer)
-                            .filter(miljoe -> bestilling.getEnvironments().contains(miljoe))
-                            .flatMap(miljoe -> postInstdata(isOpprettEndre, instdata, miljoe))
-                            .collect(Collectors.joining(",")))
-                    .map(status -> futurePersist(progress, status)));
-        }
-        return Flux.empty();
+        return Mono.just(bestilling.getInstdata())
+                .map(rsInstdata -> mapperFacade.mapAsList(rsInstdata, Instdata.class, context))
+                .flatMap(instdata -> instdataConsumer.getMiljoer()
+                        .flatMap(miljoer -> Flux.fromIterable(miljoer)
+                                .filter(miljoe -> bestilling.getEnvironments().contains(miljoe))
+                                .flatMap(miljoe -> postInstdata(isOpprettEndre, instdata, miljoe))
+                                .collect(Collectors.joining(",")))
+                        .flatMap(status -> oppdaterStatus(progress, status)));
     }
 
-    private ClientFuture futurePersist(BestillingProgress progress, String status) {
+    private Mono<BestillingProgress> oppdaterStatus(BestillingProgress progress, String status) {
 
-        return () -> {
-            transactionHelperService.persister(progress,
-                    BestillingProgress::getInstdataStatus,
-                    BestillingProgress::setInstdataStatus, status);
-            return progress;
-        };
+        return transactionHelperService.persister(progress,
+                BestillingProgress::getInstdataStatus,
+                BestillingProgress::setInstdataStatus, status);
     }
 
     @Override
@@ -71,7 +64,7 @@ public class InstdataClient implements ClientRegister {
 
     private Mono<List<Instdata>> filterInstdata(List<Instdata> instdataRequest, String miljoe) {
 
-        return instdataConsumer.getInstdata(instdataRequest.get(0).getNorskident(), miljoe)
+        return instdataConsumer.getInstdata(instdataRequest.getFirst().getNorskident(), miljoe)
                 .map(eksisterende -> {
                     log.info("Instdata hentet data fra {}: {}", miljoe, eksisterende.getInstitusjonsopphold());
                     return instdataRequest.stream()
